--- a/CSS_Folder/styles.css
+++ b/CSS_Folder/styles.css
@@ -1,5 +1,5 @@
-
-
+<!DOCTYPE HTML>
+<html>
 <style>
     body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     .w3-row-padding img {margin-bottom: 12px}
