--- a/CSS_Folder/styles.css
+++ b/CSS_Folder/styles.css
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML>
-<html>
+
 <style>
-    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+    body, h1,h2,h3,h4,h5,h6,footer {font-family: "Montserrat", sans-serif}
     .w3-row-padding img {margin-bottom: 12px}
     /* Set the width of the sidebar to 120px */
     .w3-sidebar {width: 120px;background: #222;}
